--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Assistant"
-      rel="stylesheet"
-    />
 
-    <title>Svelte app</title>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link href="https://fonts.googleapis.com/css?family=Assistant" rel="stylesheet" />
 
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="stylesheet" href="/global.css" />
+  <title>Svelte app</title>
 
-    <script defer src="/build/bundle.js"></script>
-  </head>
+  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="stylesheet" href="/global.css" />
 
-  <body>
-    <docure-button primary>Primary</docure-button>
-    <docure-button secondary>Secondary</docure-button>
-    <docure-button link>Link</docure-button>
-  </body>
+  <script defer src="/build/bundle.js"></script>
+</head>
+
+<body>
+  <docure-recently-viewed userid="test"></docure-recently-viewed>
+</body>
+
 </html>
